--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="google-site-verification" content="7ivU7ZFR4PH58WmN1OkCXNLiPNIJQ24gn42z1UQcURA" />
 <title>THE REAL CODER X</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -594,4 +595,5 @@ document.getElementById("courseModal").style.display="none";
 </script>
 
 </body>
+
 </html>
